<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonSumar"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:background="@color/colorFondoBoton"
        android:text="@string/buttonSumar_Text"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonRestar"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:background="@color/colorFondoBoton"
        android:text="@string/buttonRestar_Text"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:gravity="center"
        android:text="@string/textView_Resultado_Text"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>