<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRestar">

    <TextView
        android:id="@+id/textViewOperandoUno"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/textViewOperandoUno_Text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePrimerBloque"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMitadPantalla"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineMitadPantalla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinePrimerBloque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineSegundoBloque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/textViewOperandoDos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/textViewOperandoDos_Text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineSegundoBloque"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMitadPantalla"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelinePrimerBloque" />

    <Button
        android:id="@+id/buttonCalcularResta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/buttonOperacionResta_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineSegundoBloque"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextOperandoUno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/editTextOperandoUno_Hint"
        android:autofillHints="0.0"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePrimerBloque"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineMitadPantalla"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextOperandoDos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/editTextOperandoDos_Hint"
        android:autofillHints="0.0"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/guidelineSegundoBloque"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewOperandoDos"
        app:layout_constraintTop_toTopOf="@+id/guidelinePrimerBloque" />

</android.support.constraint.ConstraintLayout>